--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1.10.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
