--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
 
 [dependencies]
 chrono = "0.4.34"
+hex = "0.4.3"
 is_empty = "0.2.0"
+openssl = { version = "0.10.64", features = ["vendored"] }
 regex = "1.10.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sha256 = "1.5.0"
 zip = "0.6.6"
