--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,6 @@ jobs:
     - uses: actions/checkout@v4
     - uses: dtolnay/rust-toolchain@stable
     - name: build library
-    - run: cargo build --verbose
+      run: cargo build --verbose
     - name: test library
-    - run: cargo test --verbose
+      run: cargo test --verbose
