--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "passes"
 description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 authors = ["Mark Vodyanitskiy <mvodya@icloud.com>"]
 license = "MIT"
@@ -9,7 +9,7 @@ readme = "README.md"
 include = ["src/", "LICENSE", "README.md"]
 keywords = ["passkit", "wallet", "apple"]
 categories = ["parsing"]
-documentation = "https://docs.rs/passes/0.1.0/passes/"
+documentation = "https://docs.rs/passes/latest/passes/"
 repository = "https://github.com/mvodya/passes-rs"
 
 [workspace]
